--- a/resources/fin_recibo.ui
+++ b/resources/fin_recibo.ui
@@ -478,6 +478,7 @@
                                           <object class="GtkEntry" id="ent_doc_saldo">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
+                                            <property name="editable">False</property>
                                             <property name="invisible_char">●</property>
                                             <property name="xalign">0.89999997615814209</property>
                                             <property name="invisible_char_set">True</property>
@@ -520,6 +521,7 @@
                                           <object class="GtkEntry" id="ent_doc_monto">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
+                                            <property name="editable">False</property>
                                             <property name="invisible_char">●</property>
                                             <property name="xalign">0.89999997615814209</property>
                                             <property name="invisible_char_set">True</property>
