--- a/resources/main.ui
+++ b/resources/main.ui
@@ -128,6 +128,12 @@
     <property name="yalign">0.40000000596046448</property>
     <property name="pixbuf">../images/ventas_32.png</property>
   </object>
+  <object class="GtkImage" id="gtk-orientation8">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="yalign">0.40000000596046448</property>
+    <property name="pixbuf">../images/auditor_32.png</property>
+  </object>
   <object class="GtkImage" id="gtk-page-setup">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -1028,6 +1034,17 @@
                                 <property name="tooltip_text" translatable="yes">Emite Libro de Ventas</property>
                                 <property name="use_underline">True</property>
                                 <property name="image">gtk-orientation7</property>
+                                <property name="use_stock">False</property>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkImageMenuItem" id="itm_auditoria">
+                                <property name="label" translatable="yes">_Auditoria</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">Emite Libro de Ventas</property>
+                                <property name="use_underline">True</property>
+                                <property name="image">gtk-orientation8</property>
                                 <property name="use_stock">False</property>
                               </object>
                             </child>
